--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.10",
+    "axios": "^1.10.0",
+    "cors": "^2.8.5",
+    "dom-to-image-more": "^3.6.0",
+    "express": "^5.1.0",
+    "html2canvas-pro": "^1.5.11",
     "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
